Added a linear svc in the logisticRegression file

--- a/src/logisticRegression.ipynb
+++ b/src/logisticRegression.ipynb
@@ -116,8 +116,33 @@
     }
    ],
    "source": [
-    "#Initialize a NaiveBayesBernoulliClassifier\n",
+    "## Logistic Regression\n",
+    "#Initialize a logregClassifier using Stochastic Gradient Descent\n",
     "clf = SGDClassifier(loss='log')\n",
+    "clf.fit(tfidf_train,y_train)\n",
+    "#DataFlair - Predict on the test set and calculate accuracy\n",
+    "y_pred=clf.predict(tfidf_test)\n",
+    "score=accuracy_score(y_test,y_pred)\n",
+    "print(f'Accuracy: {round(score*100,2)}%')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Accuracy: 93.13%\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Support Vector Machine\n",
+    "#Initialize a Linear Support Vector Classifier using Stochastic Gradient Descent\n",
+    "clf = SGDClassifier(loss='hinge')\n",
     "clf.fit(tfidf_train,y_train)\n",
     "#DataFlair - Predict on the test set and calculate accuracy\n",
     "y_pred=clf.predict(tfidf_test)\n",
