Modified SVC instead logisticRegression, pickled Kevin's model

--- a/src/SVC.ipynb
+++ b/src/SVC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,16 +15,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"data/news.csv\")"
+    "df = pd.read_csv(\"../data/news.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,27 +51,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\kevin\\Anaconda3\\lib\\site-packages\\sklearn\\svm\\base.py:193: FutureWarning: The default value of gamma will change from 'auto' to 'scale' in version 0.22 to account better for unscaled features. Set gamma explicitly to 'auto' or 'scale' to avoid this warning.\n",
-      "  \"avoid this warning.\", FutureWarning)\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "SVC(C=1.0, cache_size=200, class_weight=None, coef0=0.0,\n",
-       "    decision_function_shape='ovr', degree=3, gamma='auto_deprecated',\n",
-       "    kernel='rbf', max_iter=-1, probability=False, random_state=None,\n",
-       "    shrinking=True, tol=0.001, verbose=False)"
+       "SVC(C=1.0, break_ties=False, cache_size=200, class_weight=None, coef0=0.0,\n",
+       "    decision_function_shape='ovr', degree=3, gamma='scale', kernel='rbf',\n",
+       "    max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
+       "    tol=0.001, verbose=False)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,14 +85,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy score =  0.4964483030781373\n"
+      "Accuracy score =  0.9289660615627466\n"
      ]
     }
    ],
@@ -111,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -134,17 +126,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy score =  0.9289660615627466\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "clf_svc = svm.SVC(gamma=1, C=1.0)\n",
     "clf_svc.fit(tfidf_train, y_train)\n",
@@ -153,6 +137,18 @@
     "\n",
     "score_svc = accuracy_score(y_predict, y_test)\n",
     "print(\"Accuracy score = \", score_svc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle \n",
+    "from joblib import dump, load\n",
+    "dump(clf_svc, 'svc_model.joblib')\n",
+    "clf = load('svc_model.joblib')"
    ]
   },
   {
@@ -179,7 +175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
