Update SVC again

--- a/src/SVC.ipynb
+++ b/src/SVC.ipynb
@@ -126,9 +126,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy score =  0.9289660615627466\n"
+     ]
+    }
+   ],
    "source": [
     "clf_svc = svm.SVC(gamma=1, C=1.0)\n",
     "clf_svc.fit(tfidf_train, y_train)\n",
@@ -141,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
