--- a/src/torchText.ipynb
+++ b/src/torchText.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -31,29 +31,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r",
-      "aclImdb_v1.tar.gz:   0%|          | 0.00/84.1M [00:00<?, ?B/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "downloading aclImdb_v1.tar.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "aclImdb_v1.tar.gz: 100%|██████████| 84.1M/84.1M [00:06<00:00, 12.2MB/s]\n",
       "/opt/anaconda3/lib/python3.7/site-packages/torchtext/data/example.py:78: UserWarning: Example class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.\n",
       "  warnings.warn('Example class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.', UserWarning)\n"
      ]
@@ -66,60 +50,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<torchtext.datasets.imdb.IMDB at 0x7fb1d36f86d0>"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<torchtext.datasets.imdb.IMDB object at 0x7fb1d36f86d0>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(train_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "When using a dict to specify fields with a csv file,skip_header must be False andthe file must have a header.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-13-f5b50f0f9b64>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m                                         \u001b[0mformat\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'csv'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m                                         \u001b[0mfields\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfields\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m                                         \u001b[0mskip_header\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m )\n",
-      "\u001b[0;32m/opt/anaconda3/lib/python3.7/site-packages/torchtext/data/dataset.py\u001b[0m in \u001b[0;36msplits\u001b[0;34m(cls, path, root, train, validation, test, **kwargs)\u001b[0m\n\u001b[1;32m     76\u001b[0m             \u001b[0mpath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcls\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdownload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mroot\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     77\u001b[0m         train_data = None if train is None else cls(\n\u001b[0;32m---> 78\u001b[0;31m             os.path.join(path, train), **kwargs)\n\u001b[0m\u001b[1;32m     79\u001b[0m         val_data = None if validation is None else cls(\n\u001b[1;32m     80\u001b[0m             os.path.join(path, validation), **kwargs)\n",
-      "\u001b[0;32m/opt/anaconda3/lib/python3.7/site-packages/torchtext/data/dataset.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, path, format, fields, skip_header, csv_reader_params, **kwargs)\u001b[0m\n\u001b[1;32m    261\u001b[0m                     raise ValueError('When using a dict to specify fields with a {} file,'\n\u001b[1;32m    262\u001b[0m                                      \u001b[0;34m'skip_header must be False and'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 263\u001b[0;31m                                      'the file must have a header.'.format(format))\n\u001b[0m\u001b[1;32m    264\u001b[0m                 \u001b[0mheader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreader\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    265\u001b[0m                 \u001b[0mfield_to_index\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mheader\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mf\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mfields\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: When using a dict to specify fields with a csv file,skip_header must be False andthe file must have a header."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "fields = {'text': ('t', TEXT), 'label': ('l', LABEL)}\n",
     "train_data, test_data = data.TabularDataset.splits(\n",
@@ -134,154 +85,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>title</th>\n",
-       "      <th>text</th>\n",
-       "      <th>label</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>8476</td>\n",
-       "      <td>You Can Smell Hillary’s Fear</td>\n",
-       "      <td>Daniel Greenfield, a Shillman Journalism Fello...</td>\n",
-       "      <td>FAKE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>10294</td>\n",
-       "      <td>Watch The Exact Moment Paul Ryan Committed Pol...</td>\n",
-       "      <td>Google Pinterest Digg Linkedin Reddit Stumbleu...</td>\n",
-       "      <td>FAKE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3608</td>\n",
-       "      <td>Kerry to go to Paris in gesture of sympathy</td>\n",
-       "      <td>U.S. Secretary of State John F. Kerry said Mon...</td>\n",
-       "      <td>REAL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>10142</td>\n",
-       "      <td>Bernie supporters on Twitter erupt in anger ag...</td>\n",
-       "      <td>— Kaydee King (@KaydeeKing) November 9, 2016 T...</td>\n",
-       "      <td>FAKE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>875</td>\n",
-       "      <td>The Battle of New York: Why This Primary Matters</td>\n",
-       "      <td>It's primary day in New York and front-runners...</td>\n",
-       "      <td>REAL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6330</th>\n",
-       "      <td>4490</td>\n",
-       "      <td>State Department says it can't find emails fro...</td>\n",
-       "      <td>The State Department told the Republican Natio...</td>\n",
-       "      <td>REAL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6331</th>\n",
-       "      <td>8062</td>\n",
-       "      <td>The ‘P’ in PBS Should Stand for ‘Plutocratic’ ...</td>\n",
-       "      <td>The ‘P’ in PBS Should Stand for ‘Plutocratic’ ...</td>\n",
-       "      <td>FAKE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6332</th>\n",
-       "      <td>8622</td>\n",
-       "      <td>Anti-Trump Protesters Are Tools of the Oligarc...</td>\n",
-       "      <td>Anti-Trump Protesters Are Tools of the Oligar...</td>\n",
-       "      <td>FAKE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6333</th>\n",
-       "      <td>4021</td>\n",
-       "      <td>In Ethiopia, Obama seeks progress on peace, se...</td>\n",
-       "      <td>ADDIS ABABA, Ethiopia —President Obama convene...</td>\n",
-       "      <td>REAL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6334</th>\n",
-       "      <td>4330</td>\n",
-       "      <td>Jeb Bush Is Suddenly Attacking Trump. Here's W...</td>\n",
-       "      <td>Jeb Bush Is Suddenly Attacking Trump. Here's W...</td>\n",
-       "      <td>REAL</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>6335 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      Unnamed: 0                                              title  \\\n",
-       "0           8476                       You Can Smell Hillary’s Fear   \n",
-       "1          10294  Watch The Exact Moment Paul Ryan Committed Pol...   \n",
-       "2           3608        Kerry to go to Paris in gesture of sympathy   \n",
-       "3          10142  Bernie supporters on Twitter erupt in anger ag...   \n",
-       "4            875   The Battle of New York: Why This Primary Matters   \n",
-       "...          ...                                                ...   \n",
-       "6330        4490  State Department says it can't find emails fro...   \n",
-       "6331        8062  The ‘P’ in PBS Should Stand for ‘Plutocratic’ ...   \n",
-       "6332        8622  Anti-Trump Protesters Are Tools of the Oligarc...   \n",
-       "6333        4021  In Ethiopia, Obama seeks progress on peace, se...   \n",
-       "6334        4330  Jeb Bush Is Suddenly Attacking Trump. Here's W...   \n",
-       "\n",
-       "                                                   text label  \n",
-       "0     Daniel Greenfield, a Shillman Journalism Fello...  FAKE  \n",
-       "1     Google Pinterest Digg Linkedin Reddit Stumbleu...  FAKE  \n",
-       "2     U.S. Secretary of State John F. Kerry said Mon...  REAL  \n",
-       "3     — Kaydee King (@KaydeeKing) November 9, 2016 T...  FAKE  \n",
-       "4     It's primary day in New York and front-runners...  REAL  \n",
-       "...                                                 ...   ...  \n",
-       "6330  The State Department told the Republican Natio...  REAL  \n",
-       "6331  The ‘P’ in PBS Should Stand for ‘Plutocratic’ ...  FAKE  \n",
-       "6332   Anti-Trump Protesters Are Tools of the Oligar...  FAKE  \n",
-       "6333  ADDIS ABABA, Ethiopia —President Obama convene...  REAL  \n",
-       "6334  Jeb Bush Is Suddenly Attacking Trump. Here's W...  REAL  \n",
-       "\n",
-       "[6335 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas\n",
     "df = pd.read_csv(\"../data/news.csv\")"
@@ -289,11 +95,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.drop(['Unnamed: 0'], axis = 1)"
+    "df = df.drop(['Unnamed: 0'], axis = 1)\n",
+    "df = df.drop(['title'], axis = 1)"
    ]
   },
   {
@@ -307,26 +114,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'news/news.json'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-34-b893f6755c74>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m                             \u001b[0mtest\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'news.json'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m                             \u001b[0mformat\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'json'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m                             \u001b[0mfields\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfields\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m )\n",
-      "\u001b[0;32m/opt/anaconda3/lib/python3.7/site-packages/torchtext/data/dataset.py\u001b[0m in \u001b[0;36msplits\u001b[0;34m(cls, path, root, train, validation, test, **kwargs)\u001b[0m\n\u001b[1;32m     76\u001b[0m             \u001b[0mpath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcls\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdownload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mroot\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     77\u001b[0m         train_data = None if train is None else cls(\n\u001b[0;32m---> 78\u001b[0;31m             os.path.join(path, train), **kwargs)\n\u001b[0m\u001b[1;32m     79\u001b[0m         val_data = None if validation is None else cls(\n\u001b[1;32m     80\u001b[0m             os.path.join(path, validation), **kwargs)\n",
-      "\u001b[0;32m/opt/anaconda3/lib/python3.7/site-packages/torchtext/data/dataset.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, path, format, fields, skip_header, csv_reader_params, **kwargs)\u001b[0m\n\u001b[1;32m    249\u001b[0m             'tsv': Example.fromCSV, 'csv': Example.fromCSV}[format]\n\u001b[1;32m    250\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 251\u001b[0;31m         \u001b[0;32mwith\u001b[0m \u001b[0mio\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexpanduser\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"utf8\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    252\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mformat\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'csv'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    253\u001b[0m                 \u001b[0mreader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0municode_csv_reader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mcsv_reader_params\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'news/news.json'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.7/site-packages/torchtext/data/example.py:13: UserWarning: Example class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.\n",
+      "  warnings.warn('Example class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.', UserWarning)\n"
      ]
     }
    ],
    "source": [
     "train_data, test_data = data.TabularDataset.splits(\n",
-    "                            path = '',\n",
+    "                            path = '.',\n",
     "                            train = 'news.json',\n",
     "                            test = 'news.json',\n",
     "                            format = 'json',\n",
