added dtype=float to label field

--- a/src/torchText.ipynb
+++ b/src/torchText.ipynb
@@ -167,7 +167,7 @@
     "\n",
     "title = Field(sequential=True, use_vocab=True, tokenize='spacy', lower=True)\n",
     "text = Field(sequential=True, use_vocab=True, tokenize='spacy', lower=True)\n",
-    "label = Field(sequential=False, use_vocab=False)\n",
+    "label = Field(sequential=False, use_vocab=False, dtype = torch.float)\n",
     "\n",
     "fields = {'title': ('title', title), 'text': ('text', text), 'label': ('label', label)}"
    ]
